code adjustments to work with herokus compiler