@@ -5,6 +5,7 @@ import Domain.CommonClasses.Response;
 import Domain.DataManagement.AnswerState.AnswerType;
 import Domain.DataManagement.SurveyAnswers;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static Domain.DataManagement.AnswerState.AnswerType.MULTIPLE_CHOICE;
@@ -37,7 +38,7 @@ public class MultipleChoiceBaseRule implements Rule{
 
     @Override
     public List<Integer> getQuestionIndex() {
-        return List.of(questionID);
+        return Arrays.asList(questionID);
     }
 
     @Override
